examples/errors/include-with-type-error/a.temple
before
{% include "b.temple" with name = is-empty([]) %}
after
